--- a/productPreviewCard/index.html
+++ b/productPreviewCard/index.html
@@ -5,10 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- stylesheet -->
     <link rel="stylesheet" href="style.css" />
+
     <title>Product Preview Card Component</title>
   </head>
   <body>
-    <main>hello world</main>
+    <main>
+      <article class="product">
+        <img
+          class="product-image"
+          src="image-product-desktop.jpg"
+          alt="Gabrielle Essence Eau perfume bottle in between two ferns"
+        />
+        <div class="product-text">
+          <header class="product-overview">
+            <span class="product-category">Perfume</span>
+            <h1 class="product-title">Gabrielle Essence Eau De Parfum</h1>
+          </header>
+          <div class="product-details">
+            <p class="product-description">
+              A floral, solar and voluptuous interpretation composed by Olivier
+              Polge, Perfumer-Creator for the House of CHANEL.
+            </p>
+            <div class="product-price">
+              <p class="product-price--sale">$149.99</p>
+              <p class="product-price--full">$169.99</p>
+            </div>
+          </div>
+          <button class="btn--add-to-cart">
+            <svg
+              class="icon--add-to-cart"
+              width="15"
+              height="16"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z"
+                fill="#FFF"
+              />
+            </svg>
+            &nbsp;&nbsp;Add to Cart
+          </button>
+        </div>
+      </article>
+    </main>
   </body>
 </html>
