added media queries

--- a/productPreviewCard/index.html
+++ b/productPreviewCard/index.html
@@ -15,17 +15,17 @@
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="queries.css" />
 
     <title>Product Preview Card Component</title>
   </head>
   <body>
     <main>
       <article class="product">
-        <img
+        <div
           class="product-image"
-          src="image-product-desktop.jpg"
-          alt="Gabrielle Essence Eau perfume bottle in between two ferns"
-        />
+          aria-label="Gabrielle Essence Eau perfume bottle placed in between two ferns"
+        ></div>
         <div class="product-text">
           <header class="product-overview">
             <span class="product-category">Perfume</span>
