added role to div to clarify aria label

--- a/productPreviewCard/index.html
+++ b/productPreviewCard/index.html
@@ -24,6 +24,7 @@
       <article class="product">
         <div
           class="product-image"
+          role="img"
           aria-label="Gabrielle Essence Eau perfume bottle placed in between two ferns"
         ></div>
         <div class="product-text">
