--- a/interactiveRatingComponent/index.html
+++ b/interactiveRatingComponent/index.html
@@ -16,6 +16,9 @@
     <!-- stylesheet -->
     <link rel="stylesheet" href="style.css" />
 
+    <!-- scripts -->
+    <script defer src="script.js"></script>
+
     <title>Interactive Rating Component</title>
   </head>
   <body>
