--- a/interactiveRatingComponent/index.html
+++ b/interactiveRatingComponent/index.html
@@ -15,6 +15,7 @@
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="queries.css" />
 
     <!-- scripts -->
     <script defer src="script.js"></script>
