--- a/interactiveRatingComponent/index.html
+++ b/interactiveRatingComponent/index.html
@@ -40,7 +40,7 @@
             Please let us know how we did with your support request. All
             feedback is appreciated to help us improve our offering!
           </p>
-          <form class="form-field" action="#">
+          <form class="form-field">
             <fieldset class="rating-fieldset">
               <legend class="hidden">Choose a rating</legend>
               <div class="rating-container">
@@ -52,7 +52,7 @@
                     value="1"
                     id="1"
                   />
-                  <label for="1">1</label>
+                  <label class="rating-label" for="1">1</label>
                 </div>
                 <div class="round-icon rating">
                   <input
@@ -62,7 +62,7 @@
                     value="2"
                     id="2"
                   />
-                  <label for="2">2</label>
+                  <label class="rating-label" for="2">2</label>
                 </div>
                 <div class="round-icon rating">
                   <input
@@ -72,7 +72,7 @@
                     value="3"
                     id="3"
                   />
-                  <label for="3">3</label>
+                  <label class="rating-label" for="3">3</label>
                 </div>
                 <div class="round-icon rating">
                   <input
@@ -82,7 +82,7 @@
                     value="4"
                     id="4"
                   />
-                  <label for="4">4</label>
+                  <label class="rating-label" for="4">4</label>
                 </div>
                 <div class="round-icon rating">
                   <input
@@ -92,11 +92,11 @@
                     value="5"
                     id="5"
                   />
-                  <label for="5">5</label>
+                  <label class="rating-label" for="5">5</label>
                 </div>
               </div>
-              <button class="btn--submit">Submit</button>
             </fieldset>
+            <button class="btn--submit">Submit</button>
           </form>
         </div>
         <div class="modal-component">
