--- a/interactiveRatingComponent/index.html
+++ b/interactiveRatingComponent/index.html
@@ -96,7 +96,7 @@
                 </div>
               </div>
             </fieldset>
-            <button class="btn--submit">Submit</button>
+            <button class="btn--submit" disabled>Submit</button>
           </form>
         </div>
         <div class="modal-component">
