centered that div

--- a/3-column-preview-card/index.html
+++ b/3-column-preview-card/index.html
@@ -21,7 +21,7 @@
   <body>
     <main>
       <div class="card-container bg--bright-orange">
-        <header>
+        <header class="card-header">
           <svg width="64" height="40" xmlns="http://www.w3.org/2000/svg">
             <g fill="none" fill-rule="evenodd">
               <circle fill="#000" opacity=".201" cx="20" cy="20" r="20" />
@@ -41,7 +41,7 @@
         <button><a href="#">Learn More</a></button>
       </div>
       <div class="card-container bg--dark-cyan">
-        <header>
+        <header class="card-header">
           <svg width="64" height="40" xmlns="http://www.w3.org/2000/svg">
             <g fill="none" fill-rule="evenodd">
               <circle fill="#000" opacity=".201" cx="20" cy="20" r="20" />
@@ -61,7 +61,7 @@
         <button><a href="#">Learn More</a></button>
       </div>
       <div class="card-container bg--very-dark-cyan">
-        <header>
+        <header class="card-header">
           <svg width="64" height="40" xmlns="http://www.w3.org/2000/svg">
             <g fill="none" fill-rule="evenodd">
               <circle fill="#000" opacity=".201" cx="20" cy="20" r="20" />
