--- a/3-column-preview-card/index.html
+++ b/3-column-preview-card/index.html
@@ -34,11 +34,11 @@
           </svg>
           <h1>Sedans</h1>
         </header>
-        <p>
+        <p class="card-description">
           Choose a sedan for its affordability and excellent fuel economy. Ideal
           for cruising in the city or on your next road trip.
         </p>
-        <button><a href="#">Learn More</a></button>
+        <a class="btn--learn-more" href="#">Learn more</a>
       </div>
       <div class="card-container bg--dark-cyan">
         <header class="card-header">
@@ -54,11 +54,11 @@
           </svg>
           <h1>SUVs</h1>
         </header>
-        <p>
+        <p class="card-description">
           Take an SUV for its spacious interior, power, and versatility. Perfect
           for your next family vacation and off-road adventures.
         </p>
-        <button><a href="#">Learn More</a></button>
+        <a class="btn--learn-more" href="#">Learn more</a>
       </div>
       <div class="card-container bg--very-dark-cyan">
         <header class="card-header">
@@ -74,11 +74,11 @@
           </svg>
           <h1>Luxury</h1>
         </header>
-        <p>
+        <p class="card-description">
           Cruise in the best car brands without the bloated prices. Enjoy the
           enhanced comfort of a luxury rental and arrive in style.
         </p>
-        <button><a href="#">Learn More</a></button>
+        <a class="btn--learn-more" href="#">Learn more</a>
       </div>
     </main>
   </body>
