replaced h1s with h2s and added a visually hidden h1

--- a/3-column-preview-card/index.html
+++ b/3-column-preview-card/index.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <main>
+      <h1 class="sr-only">Car types</h1>
       <div class="card-container bg--bright-orange">
         <div class="card-content">
           <header class="card-header">
@@ -34,7 +35,7 @@
                 />
               </g>
             </svg>
-            <h1>Sedans</h1>
+            <h2>Sedans</h2>
           </header>
           <p class="card-description">
             Choose a sedan for its affordability and excellent fuel economy.
@@ -56,7 +57,7 @@
                 />
               </g>
             </svg>
-            <h1>SUVs</h1>
+            <h2>SUVs</h2>
           </header>
           <p class="card-description">
             Take an SUV for its spacious interior, power, and versatility.
@@ -78,7 +79,7 @@
                 />
               </g>
             </svg>
-            <h1>Luxury</h1>
+            <h2>Luxury</h2>
           </header>
           <p class="card-description">
             Cruise in the best car brands without the bloated prices. Enjoy the
