--- a/result-summary-component/public/index.html
+++ b/result-summary-component/public/index.html
@@ -12,6 +12,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <main><div id="root"></div></main>
+    <main>
+      <h1 class="sr-only">Result Component</h1>
+      <div id="root"></div>
+    </main>
   </body>
 </html>
